--- a/Tutorial 2/Assignment-2.ipynb
+++ b/Tutorial 2/Assignment-2.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "### Assignment - 2\n",
     "\n",
-    "**Task Description: \n",
+    "**Task Description:** \n",
     "For a given dataset: (1,1.2), (2,1.9), (3,3.2)\n",
     "Find the line which fits the data using maximum likelihood function. Plot the line with the given dataset and post it here in the Google class room. Also create your github account and post the link of the code along with the plot so that I can check the code by clicking on it.**\n",
     "\n",
-    "**Please take beta = 1; therefore you need to find only w (i.e. intercept and slope only).**\n"
+    "Please take beta = 1; therefore you need to find only w (i.e. intercept and slope only).\n"
    ]
   },
   {
